@@ -1,6 +1,8 @@
 Giraph Change Log
 
 Release 1.1.0 - unreleased
+  GIRAPH-778: Testing with TestGraph is broken (majakabiljo)
+
   GIRAPH-777: Fix bug from GIRAPH-775 (majakabiljo)
 
   GIRAPH-776: Update Giraph to use HiveIO 0.18 (gmalewicz via majakabiljo)
